--- a/templates/dashboards/grafana-dashboard-image-builder-worker-general.configmap.yml
+++ b/templates/dashboards/grafana-dashboard-image-builder-worker-general.configmap.yml
@@ -2648,8 +2648,8 @@ data:
             "auto_min": "10s",
             "current": {
               "selected": false,
-              "text": "28d",
-              "value": "28d"
+              "text": "6h",
+              "value": "6h"
             },
             "hide": 0,
             "name": "interval",
@@ -2670,7 +2670,7 @@ data:
                 "value": "1h"
               },
               {
-                "selected": false,
+                "selected": true,
                 "text": "6h",
                 "value": "6h"
               },
@@ -2693,19 +2693,9 @@ data:
                 "selected": false,
                 "text": "7d",
                 "value": "7d"
-              },
-              {
-                "selected": false,
-                "text": "14d",
-                "value": "14d"
-              },
-              {
-                "selected": true,
-                "text": "28d",
-                "value": "28d"
               }
             ],
-            "query": "5m,30m,1h,6h,12h,1d,3d,7d,14d,28d",
+            "query": "5m,30m,1h,6h,12h,1d,3d,7d",
             "queryValue": "",
             "refresh": 2,
             "skipUrlSync": false,
