--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -177,3 +177,25 @@ jobs:
         directory: processed-templates
         config: templates/.kube-linter-config.yml
         version: 0.3.0
+
+  rpm-spec-bundle:
+    name: "🔍 Check that all bundled packages are listed in the RPM spec"
+    runs-on: ubuntu-20.04
+    steps:
+
+      - name: Check out code
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Check that all packages are listed correctly
+        run: |
+          make rpm-spec-bundle
+          if [ -n "$(git status --porcelain)" ]; then
+            echo
+            echo "Please include these changes in the RPM spec: "
+            git status -vv
+            exit "1"
+          else
+            exit "0"
+          fi
