--- a/templates/packer/ansible/roles/common/tasks/packages.yml
+++ b/templates/packer/ansible/roles/common/tasks/packages.yml
@@ -51,7 +51,7 @@
       - jq
       - unzip
       - monit
-      - vector
+      - vector-0.21.2 # vector-0.22 has broken the journald source, see https://github.com/vectordotdev/vector/issues/12966
   register: result
   retries: 5
   until: result is success
